syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.UserLevels";

import "UserLevels/Models.proto";

service UserLevelsApi {
  rpc GetByIds(GetUserLevelsByIdsRequest) returns (GetUserLevelsByIdsResult);
}
